[gd_scene load_steps=22 format=3 uid="uid://b2xr28r77qiug"]

[ext_resource type="Script" path="res://Levels/Pre-Alpha/pre_alpha.gd" id="1_1b5qn"]
[ext_resource type="PackedScene" uid="uid://daxcj2wau0q4c" path="res://UI/pause_menu.tscn" id="2_bo550"]
[ext_resource type="Script" path="res://UI/forge_health_bar.gd" id="2_reldq"]
[ext_resource type="PackedScene" uid="uid://orvopfwdvrfy" path="res://Player/player.tscn" id="4_usip7"]
[ext_resource type="FontFile" uid="uid://rerjonsav62n" path="res://Other/Fonts/Epyval.ttf" id="5_p2toc"]
[ext_resource type="Script" path="res://UI/total_score_board.gd" id="6_qvoby"]
[ext_resource type="PackedScene" uid="uid://c50ipxmc8vfys" path="res://Merge Assets/Forge/forge.tscn" id="9_u53oa"]
[ext_resource type="PackedScene" uid="uid://b3ecukkmu1kt3" path="res://Merge Assets/Map/Updated Scenes/TerrainOnly.tscn" id="9_vbnsh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ejsy0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_eegs5"]
sky_material = SubResource("ProceduralSkyMaterial_ejsy0")

[sub_resource type="Environment" id="Environment_nm1w5"]
background_mode = 2
sky = SubResource("Sky_eegs5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mivx"]
bg_color = Color(0.376471, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4lgrj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya7h5"]
bg_color = Color(0.360676, 0.00560704, 0.657435, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uv8ou"]
bg_color = Color(1, 0.968627, 0, 1)
border_color = Color(0, 0, 0, 1)
border_blend = true
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch0nd"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8qus"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kncfr"]
bg_color = Color(0.623529, 0.247059, 0.909804, 0.203922)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_472va"]
bg_color = Color(0.623529, 0.247059, 0.909804, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_weefp"]
bg_color = Color(0.623529, 0.247059, 0.909804, 0.25098)

[sub_resource type="NavigationMesh" id="NavigationMesh_yycwc"]

[node name="World" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.162144, -0.0722611, 0.146532)
script = ExtResource("1_1b5qn")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nm1w5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1266.0
offset_top = -8.0
offset_right = 1306.0
offset_bottom = 32.0
mouse_filter = 1

[node name="RegenRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_right = 3412.0
offset_bottom = 2283.0
mouse_filter = 2
color = Color(0.17139, 0.642574, 0.231583, 0.231373)

[node name="OldHealthBar" type="TextEdit" parent="UI"]
visible = false
layout_mode = 0
offset_left = -1161.0
offset_top = 1035.0
offset_right = -1062.0
offset_bottom = 1070.0
text = "Health: 6/6"

[node name="Regen" type="Timer" parent="UI"]
wait_time = 5.0
one_shot = true

[node name="Debug Menu" type="TextEdit" parent="UI"]
visible = false
layout_direction = 1
layout_mode = 1
offset_left = 49.0
offset_top = 8.0
offset_right = 361.0
offset_bottom = 202.0
text = "Debug Menu:
1. Restart Scene
2. Max Health 
3. Min Health
4. Regen Health
5. Forge Lose 1 HP"

[node name="win_lose_text" type="TextEdit" parent="UI"]
visible = false
layout_mode = 0
offset_left = -391.0
offset_top = 495.0
offset_right = -312.0
offset_bottom = 533.0
text = "You Win!"

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="HealthBarControl" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -117.0
offset_right = 446.0
offset_bottom = -41.0
grow_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="UI/CanvasLayer/HealthBarControl"]
layout_mode = 0
offset_top = 1.0
offset_right = 383.0
offset_bottom = 73.0
theme_override_styles/fill = SubResource("StyleBoxFlat_4mivx")
max_value = 6.0
step = 1.0
show_percentage = false

[node name="ForgeHealthBarControl" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="ForgeHealthBar" type="ProgressBar" parent="UI/CanvasLayer/ForgeHealthBarControl"]
z_index = 1
layout_mode = 0
offset_left = -600.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxEmpty_4lgrj")
theme_override_styles/fill = SubResource("StyleBoxFlat_ya7h5")
max_value = 30.0
step = 1.0
value = 5.0
show_percentage = false
script = ExtResource("2_reldq")

[node name="ForgeSecondaryBar" type="ProgressBar" parent="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_uv8ou")
theme_override_styles/fill = SubResource("StyleBoxFlat_ch0nd")
max_value = 30.0
value = 30.0
show_percentage = false

[node name="decay_timer" type="Timer" parent="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar"]
wait_time = 0.4
one_shot = true

[node name="stun_timer" type="Timer" parent="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar"]
one_shot = true

[node name="VersionControl" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 37.0

[node name="Version" type="TextEdit" parent="UI/CanvasLayer/VersionControl"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 136.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0.458093, 0.120004, 0.691182, 1)
theme_override_fonts/font = ExtResource("5_p2toc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_g8qus")
text = "Pre-Alpha
"

[node name="LogControl" type="Control" parent="UI/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -293.0
offset_bottom = 646.0
grow_horizontal = 0

[node name="ConsoleLog" type="TextEdit" parent="UI/CanvasLayer/LogControl"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 297.0
offset_bottom = 649.0
text = "Log:
"

[node name="WaveCountControl" type="Control" parent="UI/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -958.0
offset_top = 267.0
offset_right = -714.0
offset_bottom = 382.0
grow_horizontal = 2

[node name="WaveInfo" type="TextEdit" parent="UI/CanvasLayer/WaveCountControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 0.2
offset_left = -4.0
offset_right = 165.0
offset_bottom = 55.0
text = "Waves Remaining: 5
Enemies: 0"

[node name="WaveTimerText" type="TextEdit" parent="UI/CanvasLayer/WaveCountControl"]
layout_mode = 0
offset_left = -7.0
offset_top = 76.0
offset_right = 215.0
offset_bottom = 120.0
text = "10 seconds until next wave"

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = -1263.0
offset_top = 11.0
offset_right = 660.0
offset_bottom = 1094.0
mouse_filter = 2
color = Color(1, 0.0392157, 0.145098, 0.231373)

[node name="PauseMenu" parent="UI" instance=ExtResource("2_bo550")]
visible = false
layout_mode = 1
offset_left = -508.0
offset_top = 306.0
offset_right = -402.0
offset_bottom = 418.0
scale = Vector2(3, 3)

[node name="scoreboard" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -1261.0
offset_top = 802.0
offset_right = -982.0
offset_bottom = 968.0
grow_vertical = 0
scale = Vector2(1.52121, 1.45337)
size_flags_horizontal = 0
mouse_filter = 2

[node name="header" type="Label" parent="UI/scoreboard"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_p2toc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_kncfr")
text = "SCOREBOARD"
horizontal_alignment = 1

[node name="total_score" type="Label" parent="UI/scoreboard"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("5_p2toc")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_472va")
text = "SCORE: [Number here]"
script = ExtResource("6_qvoby")

[node name="info" type="Label" parent="UI/scoreboard"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_p2toc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_weefp")
text = "+15 (Kills)
-30 (Deaths)"

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Map" type="Node3D" parent="."]

[node name="Player" parent="Map" instance=ExtResource("4_usip7")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 28.8781)

[node name="Spawns" type="Node3D" parent="Map"]

[node name="Spawn1" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5589, 0.554403, -17.9665)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.32212)
navigation_mesh = SubResource("NavigationMesh_yycwc")

[node name="Map 1 (Canyon)" parent="Map/NavigationRegion3D" instance=ExtResource("9_vbnsh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.714, -3.837, 9.615)

[node name="Forge" parent="Map" instance=ExtResource("9_u53oa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.32212)

[node name="Spawnables" type="Node3D" parent="."]

[connection signal="win_condition" from="." to="." method="_on_win_condition"]
[connection signal="timeout" from="UI/Regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="UI/Regen" to="Map/Player" method="_on_regen_timeout"]
[connection signal="value_changed" from="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar" to="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar" method="_on_value_changed"]
[connection signal="timeout" from="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar/decay_timer" to="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar" method="_on_decay_timer_timeout"]
[connection signal="timeout" from="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar/stun_timer" to="UI/CanvasLayer/ForgeHealthBarControl/ForgeHealthBar" method="_on_stun_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="player_death" from="Map/Player" to="." method="_on_player_player_death"]
[connection signal="player_hit" from="Map/Player" to="." method="_on_player_player_hit"]
[connection signal="player_respawn" from="Map/Player" to="." method="_on_player_player_respawn"]
